--- a/problem2.ipynb
+++ b/problem2.ipynb
@@ -288,6 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from copy import deepcopy\n",
     "class _Optimizer:\n",
     "    def __init__(self, solution, alpha, silent=True):\n",
     "        self.solution = solution\n",
@@ -301,9 +302,11 @@
     "\n",
     "class SGD(_Optimizer):    \n",
     "    def __call__(self, loss):\n",
-    "        f, g = loss(self.solution)\n",
+    "        f, g, _, _ = loss(self.solution)\n",
     "        self.parameters[...] = self.parameters - self.alpha * g\n",
     "        if not self.silent: return f, g\n",
+    "    \n",
+    "    def __str__(self) -> str: return 'SGD'\n",
     "\n",
     "\n",
     "class Nesterov(_Optimizer):\n",
@@ -313,7 +316,7 @@
     "        self.x = np.copy(self.parameters)\n",
     "        \n",
     "    def __call__(self, loss):\n",
-    "        f, g = loss(self.solution)\n",
+    "        f, g, _, _ = loss(self.solution)\n",
     "        x_ = self.parameters - self.alpha * g\n",
     "        self.parameters[...] = (1 + self.mu) * x_ - self.mu * self.x\n",
     "        self.x = x_\n",
@@ -322,93 +325,8 @@
     "    @property\n",
     "    def mu(self):\n",
     "        return 1 - 3 / (5 + self.k)\n",
-    "\n",
-    "class GaussNewton(_Optimizer):\n",
-    "    def __init__(self, solution, alpha, silent=True):\n",
-    "        super().__init__(solution, alpha, silent)\n",
-    "        self.k = 0\n",
-    "\n",
-    "    def __call__(self,loss):\n",
-    "        self.k += 1\n",
-    "        f,g = loss(self.solution)\n",
-    "        \n",
-    "\n",
-    "class LevenberqMarquardt(_Optimizer):\n",
-    "    def __init__(self, solution, alpha, silent=True,rmax = 1,rmin=1e-12,rho_good=0.75,rho_bad=0.25,maxit = 100,eta = 0.01):\n",
-    "        super().__init__(solution, alpha, silent)\n",
-    "        self.rmin = rmin\n",
-    "        self.rmax = rmax\n",
-    "        self.rho_good = rho_good\n",
-    "        self.rho_bad = rho_bad\n",
-    "        self.maxit = maxit\n",
-    "        self.R = 0.2*rmax\n",
-    "        self.eta = eta\n",
-    "        self.k = 0\n",
-    "\n",
-    "    def __call__(self,loss):\n",
-    "        self.k+=1\n",
-    "        r,g,J = loss(self.solution)\n",
-    "       \n",
-    "        sz = np.shape(g)\n",
-    "        g = np.reshape(g,sz[0]*sz[1])\n",
-    "        Jtr = np.transpose(J)\n",
-    "        B = np.matmul(Jtr,J)\n",
-    "        p = -np.linalg.lstsq(B,g)[0]\n",
-    "     \n",
-    "        norm_p = np.linalg.norm(p)\n",
-    "        n,d = np.shape(J)\n",
-    "        # n = J.size(dim=0)  # the number of components of r\n",
-    "        # d = J.size(dim=1)  # the number of variables\n",
-    "\n",
-    "        if norm_p > self.R:\n",
-    "            diff = np.abs(norm_p-self.R)\n",
-    "            iter_lam = 0\n",
-    "            lam_tol = 0.01*self.R\n",
-    "            lam = 1\n",
-    "            while diff > lam_tol:\n",
-    "                B1 = B+lam*np.eye(d)\n",
-    "                C = np.linalg.cholesky(B1)\n",
-    "                p = -np.linalg.solve(np.transpose(C),np.linalg.solve(C,g))\n",
-    "                norm_p = np.linalg.norm(p)\n",
-    "                diff = np.abs(norm_p-self.R)\n",
-    "                if diff > lam_tol:\n",
-    "                    q = np.linalg.solve(C,p)\n",
-    "                    norm_q = np.linalg.norm(q)\n",
-    "\n",
-    "                    lamnew = lam + (norm_p/norm_q)**2*(norm_p-self.R)/self.R\n",
-    "                    if lamnew < 0:\n",
-    "                        lam = 0.5*lam\n",
-    "                    else:\n",
-    "                        lam = lamnew\n",
-    "                    iter_lam = iter_lam + 1\n",
-    "                    gap = np.abs(norm_p - self.R)\n",
-    "                    \n",
-    "        p = np.reshape(p,sz)\n",
-    "\n",
-    "        xold = self.parameters\n",
-    "        self.parameters[...] = self.parameters + p\n",
-    "\n",
-    "        rnew, gnew, Jnew = loss(self.solution)\n",
-    "\n",
-    "        sz = np.shape(gnew)\n",
-    "        gnew = np.reshape(gnew, sz[0]*sz[1])\n",
-    "        p = np.reshape(p,sz[0]*sz[1])\n",
-    "        rho = -(r - rnew)/(np.sum(gnew*p)+0.5*sum(p*np.matmul(B,p)))\n",
     "    \n",
-    "        # adjust the trust region radius\n",
-    "        if rho < self.rho_bad:\n",
-    "            self.R = np.max(np.matrix([self.rmin, 0.25*self.R]))\n",
-    "        elif rho > self.rho_good:\n",
-    "            R = np.min(np.matrix([self.rmax, 2.0*self.R]))\n",
-    "        # accept or reject the step\n",
-    "        if rho <= self.eta:\n",
-    "            self.parameters[...] = xold\n",
-    "           \n",
-    "        if not self.silent:\n",
-    "            return r,g\n",
-    "        \n",
-    "        \n",
-    "                \n",
+    "    def __str__(self) -> str: return 'Nesterov'\n",
     "\n",
     "\n",
     "class Adam(_Optimizer):\n",
@@ -422,13 +340,146 @@
     "    \n",
     "    def __call__(self, loss):\n",
     "        self.k += 1\n",
-    "        f, g = loss(self.solution)\n",
+    "        f, g, _, _ = loss(self.solution)\n",
     "        self.m = self.beta_1 * self.m + (1-self.beta_1) * g\n",
     "        self.v = self.beta_2 * self.v + (1-self.beta_2) * (g ** 2)\n",
     "        m_hat = self.m / (1 - self.beta_1 ** self.k)\n",
     "        v_hat = self.v / (1 - self.beta_2 ** self.k)\n",
     "        self.parameters[...] = self.parameters - self.alpha * m_hat / (np.sqrt(v_hat) + self.epsilon)\n",
-    "        if not self.silent: return f, g"
+    "        if not self.silent: return f, g\n",
+    "    \n",
+    "    def __str__(self) -> str: return 'Adam'\n",
+    "\n",
+    "\n",
+    "class LevenberqMarquardt(_Optimizer):\n",
+    "    def __init__(self, solution, alpha, silent=True, rmax=1, rmin=1e-12, rho_good=0.75, rho_bad=0.25, maxit=100, eta=0.01):\n",
+    "        super().__init__(solution, alpha, silent)\n",
+    "        self.rmin = rmin\n",
+    "        self.rmax = rmax\n",
+    "        self.rho_good = rho_good\n",
+    "        self.rho_bad = rho_bad\n",
+    "        self.maxit = maxit\n",
+    "        self.R = 0.2*rmax\n",
+    "        self.eta = eta\n",
+    "        self.k = 0\n",
+    "\n",
+    "    def __call__(self, loss):\n",
+    "\n",
+    "        self.k += 1\n",
+    "\n",
+    "        f, g, self.J, self.res = loss(self.solution)\n",
+    "        sz = np.shape(g)\n",
+    "        sJ = np.shape(self.J)\n",
+    "      \n",
+    "        self.J = np.reshape(self.J,[sJ[0],sJ[1]*sJ[2]])\n",
+    "        n, self.d = np.shape(self.J)\n",
+    "\n",
+    "        Jtr = np.transpose(self.J)\n",
+    "        # np.matmul(Jtr, self.res)\n",
+    "        self.grad = np.reshape(g, sz[0]*sz[1])\n",
+    "        self.n, self.d = np.shape(self.J)\n",
+    "        \n",
+    "        B = np.matmul(Jtr, self.J)\n",
+    "        p = -np.linalg.lstsq(B, self.grad)[0]\n",
+    "        norm_p = np.linalg.norm(p)\n",
+    "\n",
+    "        if norm_p > self.R:\n",
+    "            diff = np.abs(norm_p-self.R)\n",
+    "            iter_lam = 0\n",
+    "            lam_tol = 0.01*self.R\n",
+    "            lam = 1\n",
+    "            while diff > lam_tol:\n",
+    "                B1 = B+lam*np.eye(self.d)\n",
+    "                C = np.linalg.cholesky(B1)\n",
+    "                p = -np.linalg.solve(np.transpose(C), np.linalg.solve(C, self.grad))\n",
+    "                norm_p = np.linalg.norm(p)\n",
+    "                diff = np.abs(norm_p-self.R)\n",
+    "                if diff > lam_tol:\n",
+    "                    q = np.linalg.solve(C, p)\n",
+    "                    norm_q = np.linalg.norm(q)\n",
+    "\n",
+    "                    lamnew = lam + np.power((norm_p/norm_q),2)*(norm_p-self.R)/self.R\n",
+    "                    if lamnew < 0:\n",
+    "                        lam = 0.5*lam\n",
+    "                    else:\n",
+    "                        lam = lamnew\n",
+    "                    iter_lam = iter_lam + 1\n",
+    "                    diff = np.abs(norm_p - self.R)\n",
+    "\n",
+    "        p = np.reshape(p, sz)\n",
+    "        xold = np.copy(self.parameters)\n",
+    "        self.parameters[...] = self.parameters + p\n",
+    "\n",
+    "        fnew, gnew, Jnew,rnew = loss(self.solution)\n",
+    "        fnew = 0.5 * np.sum((rnew) ** 2)\n",
+    "\n",
+    "        p = np.reshape(p, sz[0]*sz[1])\n",
+    "\n",
+    "        rho = -(f - fnew)/(np.sum(self.grad*p)+0.5*sum(p*np.matmul(B, p)))\n",
+    "        if rho < self.rho_bad:\n",
+    "            self.R = np.max([self.rmin, 0.25*self.R])\n",
+    "        elif rho > self.rho_good:\n",
+    "            self.R = np.min([self.rmax, 2.0*self.R])\n",
+    "        # accept or reject the step\n",
+    "        if rho <= self.eta:\n",
+    "            self.parameters[...] = xold\n",
+    "\n",
+    "        if not self.silent:\n",
+    "            return fnew,self.grad\n",
+    "\n",
+    "    def __str__(self) -> str: return 'LevenbergMarquardt'\n",
+    "\n",
+    "\n",
+    "\n",
+    "class GaussNewton(_Optimizer):\n",
+    "    def __init__(self, solution, alpha, silent=True):\n",
+    "        super().__init__(solution, alpha, silent)\n",
+    "\n",
+    "        self.k = 0\n",
+    "        self.gamma = 0.9\n",
+    "\n",
+    "    def __call__(self,loss):\n",
+    "        self.k += 1\n",
+    "\n",
+    "        f, g, self.J, self.res = loss(self.solution)\n",
+    "        sz = np.shape(g)\n",
+    "        sJ = np.shape(self.J)\n",
+    "        self.grad = np.reshape(g,sz[0]*sz[1])\n",
+    "        self.J = np.reshape(self.J,[sJ[0],sJ[1]*sJ[2]])\n",
+    "        Jtr = np.transpose(self.J)\n",
+    "        B = np.matmul(Jtr,self.J)\n",
+    "        b = np.matmul(Jtr,self.res)\n",
+    "      #  print(np.shape(np.expand_dims(self.J,-1)))\n",
+    "        p = np.linalg.lstsq(B,-b)[0]\n",
+    "        #p = np.matmul(np.linalg.pinv(B),-b)#-np.linalg.lstsq(self.J,-self.res)[0]\n",
+    "        solcopy = deepcopy(self.solution)\n",
+    "        aux = 0.5*np.matmul(np.transpose(self.grad),p)#self.grad*p\n",
+    "        p = np.reshape(p,sz)\n",
+    "        a = self._linesearch(loss,solcopy,1,p,aux)\n",
+    "\n",
+    "        self.parameters[...] = self.parameters+a*p\n",
+    "\n",
+    "        if not self.silent:\n",
+    "\n",
+    "            return f, g\n",
+    "       \n",
+    "    def _linesearch(self, loss, solcopy, a, p, aux) -> float:\n",
+    "        f0 = loss.onlyloss(self.solution)\n",
+    "        f1 = f0+a*aux+1\n",
+    "        kmax = np.ceil(np.log(1e-14)/np.log(self.gamma))\n",
+    "        k = 0\n",
+    "    \n",
+    "        while (f1 > f0+a*aux and k < kmax):\n",
+    "            solcopy.N.w = self.parameters + a*p\n",
+    "\n",
+    "            f1 = loss.onlyloss(solcopy)\n",
+    "            \n",
+    "            a = a*self.gamma\n",
+    "            k += 1\n",
+    "\n",
+    "        return a\n",
+    "\n",
+    "    def __str__(self) -> str: return 'GaussNewton'"
    ]
   },
   {
